--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
     "express": "^4.18.1",
     "mongoose": "^7.3.4",
     "nodemon": "^3.0.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.17.0",
+    "eslint": "^8.57.1",
+    "globals": "^15.14.0"
   }
 }
